src/frontend/src/Components/map/panels/weather/LocalWeatherPanel.scss
@import "../../../../styles/variables";

.popup {
  // Local weather popup
  &--weather--local {
    .popup__title {
      background-color: $Grey30;

      .name {
        color: $Type-Primary;
      }

      .sub-name {
        font-size: 0.875rem;
        color: $Grey80;
      }
    }

    .popup__content {
      display: flex;
      flex-direction: column;
      height: 100%; 

      p {
        margin-bottom: 0;
      }

      &__title {
        margin-bottom: 1rem;
        .description {
          font-size: 0.875rem;
          margin-bottom: 0.5rem;
        }

        .friendly-time {
          margin-top: 0.5rem;

          &-text {
            color: $Grey80;
            font-size: 0.75rem;
          }
        }
      }

      &__description {
        flex-grow: 1;
        & > div {
          padding-bottom: 1rem;
        }
        .temperatures {
          display: flex;
          justify-content: space-around;
          text-align: center;
          margin-bottom: 1rem;

          .temperature {
            .label {
              color: $Grey80;
            }

            .data {
              font-size: 4rem;
              font-weight: 400;
              line-height: 1.2;
            }
          }
        }
      }
      
      &__footer {
        padding: 1rem;
        margin-top: auto;
  
        p {
          font-size: 0.875rem;
          color: $Grey80;
          text-align: center;
          margin-bottom: 0.4rem;
        }
      }
    }
  }

  .data-card-container {
    .container-label {
      font-size: 1rem;
      font-weight: 700;

      &.present-weather {
        margin-bottom: 24px;
      }

      .data-card__row {
        &:first-child {
          border-top: 0;
        }
      }
    }

    .row--present-weather {
      display: flex;

      .data-icon {
        margin-right: 0.75rem;
        color: $Grey80;
      }
    }

    .hourly-forecast {
      .data-card__row:not(:first-child) {
        padding-top: 0.4rem;
      }

      .data-card__row {
        margin-top: 0;
        display: flex;
        justify-content: space-between;
        padding: 0.25rem 0 0.75rem;

        .friendly-time-text {
          font-size: 0.875rem;
          color: $Grey80;
        }

        .temperature {
          font-size: 0.875rem;
          font-weight: 700;
          color: $Type-Primary;
        }
      }
    }
  }
}

